# chapter7-civ-timeline

./: .audit_sources.py  .check_db.py  .check_sources.py  .gitignore  .probe_links.py  .rel_check.py  .validate_seeds.py  README.md  _probe_models.py  alembic.ini  export_seeds.py  pyproject.toml  streamlit_app.py
alembic/: env.py
alembic/versions/: 00a5eaa230a8_day20_add_indexes.py  24b67d692f65_add_civ_centroid_lat_lon.py  25c46e35a004_create_core_tables.py  2fb73dd75d46_add_civ_centroid_lat_lon.py  7344c619d220_add_sources_and_links.py  9b1f_alias_plural_views.py
app/: db.py  main.py
app/db/: __init__.py  core.py  init_db.py  seed_from_csv.py  session.py
app/models/: __init__.py  civilization.py  core.py  event.py  schemas.py  source.py
data/: civ.db  civ_sources.csv  event_sources.csv  lenses.json  sources.csv
data/seeds/: civ_centroids.csv  civ_sources.csv  civ_sources_full_export.csv  civilizations.csv  event_sources_full_export.csv  events.csv  events_full_export.csv  sources.csv  sources_full_export.csv
scripts/: backup_db.py  bench_timeline.py  ingest_seeds.py  update_centroids.py
tests/: conftest.py  test_ingest.py  test_ingest_and_backup.py  test_migrations.py  test_queries.py  test_read_api.py  test_seed_counts.py
ui/: Home.py
