[project]
name = "chapter7-civ-timeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Mrs CAT",email = "130324827+Nkokubu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]>=0.35.0,<0.36.0",
  "sqlmodel>=0.0.21",
  "sqlalchemy>=2.0,<2.1",
  "alembic>=1.16.4,<2.0.0",
  "pydantic>=2,<3",
  "python-dotenv>=1.1.1,<2.0.0",
  "streamlit>=1.48.1,<2.0.0",
  "plotly>=6.3.0,<7.0.0",
  "requests>=2.32.5,<3.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

